Fix j/k shortcuts to work with collapsed comments
Use x key to expand/collapse comments

--- a/src/index.css
+++ b/src/index.css
@@ -273,6 +273,11 @@ code {
   }
 }
 
+details:not([open]) > summary ~ * {
+  /* HACK: allow JS know that this is invisible */
+  --invisible: 1;
+}
+
 [tabindex='-1'] {
   outline: 0;
 }
